CICO-4124 fixing issue with text overlapping beyond circle enclosing it

--- a/guestweb/css/less/snt.less
+++ b/guestweb/css/less/snt.less
@@ -327,10 +327,10 @@ svg {
     fill: currentColor;
     text-align: center;
     .time {
-      font-size: 150px;
+      font-size: 128px;
     }
     .ap {
-      font-size: 80px;
+      font-size: 72px;
     }
   }
 }
